--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
+server.port=8189
 spring.profiles.active=dev
-
-# Mysql 注意替换相应配置
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/xunwu?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=Lzxzzlgf87!
-# redis config
-spring.redis.database=0
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.pool.min-idle=1
-spring.redis.timeout=3000
+# jpa config
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
 logging.level.org.hibernate.SQL=debug
 # thymeleaf
-spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.prefix=classpath:/templates/
+
 #session会话存储方式
 spring.session.store-type=hash_map
 # 关闭HTTP基本验证
 security.basic.enabled=false
+
+spring.devtools.restart.exclude=templates/**,static/**
+
+server.error.whitelabel.enabled=false
