use spring security handle authority

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8189
+server.port=8289
 spring.profiles.active=dev
-# jpa config
+# jpa configHH
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 logging.level.org.hibernate.SQL=debug
