--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,23 @@
             <artifactId>thymeleaf-spring4</artifactId>
             <version>3.0.2.RELEASE</version>
         </dependency>
+        <!-- SpringSecurity 依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!-- Thymeleaf方言支持SpringSecurity 依赖-->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+            <version>${thymeleaf-extras-springsecurity4.version}</version>
+        </dependency>
 
         <!-- 测试依赖 -->
         <dependency>
